# github-action-management

./: .gitignore  FILE_LIST.md  IMPLEMENTATION_STATUS.md  LICENSE  PRD.md  PROJECT_PROGRESS.md  QUICKSTART.md  README.md  TESTING_GUIDE.md  TEST_STATUS.md  TEST_SUMMARY.md  TOKEN_SETUP.md  check_project.py  index.html  package.json  setup.sh  tauri.conf.json  vite.config.ts  产品需求文档.md  项目完成总结.md
.github/workflows/: batch-test.yml  prd-test.yml  secret-test.yml
src/: App.css  App.tsx  components.css  index.css  types.ts
src-tauri/: Cargo.toml  build.rs
src-tauri/src/: github_client.rs  main.rs  models.rs
src/components/: RunsPanel.tsx  Sidebar.tsx  WorkflowPanel.tsx
